[project]
name = "music-analyzer"
version = "0.1.0"
description = "A tool for analyzing musical audio files"
requires-python = ">=3.8"
dependencies = [
    "librosa>=0.10.1",
    "numpy>=1.20.0",
    "matplotlib<3.8.0",
    "soundfile>=0.12.1",
    "scipy<1.11.0",
    "pandas>=1.3.0",
    "setuptools>=69.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
